# accord-rfc

./: .gitattributes  .gitignore  Cargo.toml  README.md  accord-server.toml.example  docker-compose.yml
.github/workflows/: ci.yml  release.yml
.run/: Client.run.xml  Private Smoke (e2e).run.xml  Server (SQLite, no Docker).run.xml  Server.run.xml  Smoke Test (e2e).run.xml
crates/accord-client/: index.html  package-lock.json  package.json  vite.config.ts
crates/accord-client/scripts/: generate-source-icon.cjs
crates/accord-client/src/: App.tsx  NotificationBar.tsx  api.ts  main.tsx  notifications.ts  rnnoise.ts  styles.css  ui.css  voice.ts  voicePrefs.ts
crates/accord-client/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.dev.conf.json  tauri.windows.conf.json
crates/accord-client/src-tauri/capabilities/: default.json
crates/accord-client/src-tauri/icons/: icon.icns
crates/accord-client/src-tauri/src/: at_rest.rs  factory.rs  grpc.rs  history.rs  hosting.rs  identity.rs  logging.rs  main.rs  mesh.rs  mls_persist.rs  peers.rs  settings.rs  state.rs  sync.rs  taverns.rs  taverns_it.rs  vault.rs  webview_perms.rs
crates/accord-client/src-tauri/src/commands/: accounts.rs  auth.rs  blocks.rs  contacts.rs  dto.rs  friends.rs  messaging.rs  mls.rs  mod.rs  server.rs  voice.rs
crates/accord-client/src/sandbox/: SandboxedFrame.tsx  hostBridge.ts
crates/accord-crypto/: Cargo.toml
crates/accord-crypto/src/: backup.rs  hashing.rs  identity.rs  lib.rs
crates/accord-mls/: Cargo.toml
crates/accord-mls/src/: engine.rs  lib.rs
crates/accord-proto/: Cargo.toml  build.rs
crates/accord-proto/src/: lib.rs
crates/accord-server/: Cargo.toml
crates/accord-server/examples/: backup_smoke.rs  contact_dm_smoke.rs  embedded_smoke.rs  friend_smoke.rs  guest_smoke.rs  identity_smoke.rs  key_auth_smoke.rs  mailbox_smoke.rs  private_invite_smoke.rs  private_smoke.rs  refresh_smoke.rs  roles_smoke.rs  smoke.rs  taverns_smoke.rs  tls_smoke.rs  vault_smoke.rs
crates/accord-server/src/: authz.rs  config.rs  error.rs  lib.rs  main.rs  tls.rs  util.rs
crates/accord-server/src/auth/: jwt.rs  mod.rs  password.rs  service.rs
crates/accord-server/src/backup/: mod.rs  service.rs
crates/accord-server/src/friends/: mod.rs  service.rs
crates/accord-server/src/groups/: mod.rs  service.rs
crates/accord-server/src/guardrails/: mod.rs  names.rs  tests.rs
crates/accord-server/src/messaging/: hub.rs  mod.rs  service.rs
crates/accord-server/src/mls_relay/: mod.rs  service.rs
crates/accord-server/src/roles/: mod.rs  service.rs
crates/accord-server/src/store/: mod.rs  model.rs  postgres.rs  sqlite.rs
crates/accord-server/src/vault/: mod.rs  service.rs
crates/accord-types/: Cargo.toml
crates/accord-types/src/: contact.rs  invite.rs  lib.rs  perms.rs
migrations/postgres/: 0001_init.sql  0002_seed_general.sql  0003_mls.sql  0004_invites.sql  0005_roles.sql  0006_identity.sql  0007_backups.sql  0008_vault.sql  0009_inbox_private.sql  0010_guests.sql  0011_friend_requests.sql  0012_taverns.sql  0013_moderation.sql  0014_role_display.sql  0015_tavern_banner.sql  0016_categories.sql  0017_user_avatar.sql
migrations/sqlite/: 0001_init.sql  0002_seed_general.sql  0003_mls.sql  0004_invites.sql  0005_roles.sql  0006_identity.sql  0007_backups.sql  0008_vault.sql  0009_inbox_private.sql  0010_guests.sql  0011_friend_requests.sql  0012_taverns.sql  0013_moderation.sql  0014_role_display.sql  0015_tavern_banner.sql  0016_categories.sql  0017_user_avatar.sql
proto/: auth.proto  backup.proto  common.proto  friends.proto  groups.proto  messaging.proto  mls.proto  roles.proto  vault.proto
