[package]
name = "accord-crypto"
version = "0.1.0"
edition = "2024"
description = "Client-side cryptography for Accord: Ed25519 identity, Argon2id+XChaCha20 key backup, BLAKE3 hashing."

[lints]
workspace = true

[dependencies]
accord-types.workspace = true

argon2.workspace = true
ed25519-dalek.workspace = true
chacha20poly1305.workspace = true
blake3.workspace = true
zeroize.workspace = true
rand.workspace = true
rand_core.workspace = true
thiserror.workspace = true
serde.workspace = true
