[package]
name = "accord-types"
version = "0.1.0"
edition = "2024"
description = "Shared domain newtypes (UserId, DeviceId, GroupId, ...) for Accord."

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
uuid.workspace = true
thiserror.workspace = true
